Fix overly eager scrollbars

--- a/stylesheets/layout/_common.sass
+++ b/stylesheets/layout/_common.sass
@@ -24,7 +24,7 @@ pre
   border-radius: 2px
   color: $gray6
   padding: ln(1/2)
-  overflow: scroll
+  overflow-x: auto
 
 
 nav h1 a
